# skafos

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  gen_mod.sh
build_envs/: production_env.h  staging_env.h
cmake/: FindLibZip.cmake  FindLibgit2.cmake  FindYamlCpp.cmake
libs/: CMakeLists.txt
libs/cpr/: CMakeLists.txt
libs/docopt/: CMakeLists.txt
libs/libcommand/: .codeclimate.yml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  test-all.sh
libs/libcommand/debian/: changelog  control  copyright  rules
libs/libcommand/docs/: Doxyfile.in  Makefile.am
libs/libcommand/docs/examples/basic/: example.cpp
libs/libcommand/examples/: Makefile.am  functions.cpp  methods.cpp
libs/libcommand/include/: Makefile.am  argument.h  callable.h  command.h  descriptive.h  grouped.h  multiValue.h  option.h  parameter.h  required.h
libs/libcommand/include/exception/: missingOptionValue.h  missingRequiredParameter.h  optionFailedConversion.h  optionValueNotSpecified.h
libs/libcommand/src/: main.cpp
libs/libcommand/tests/: Makefile.am
libs/libcommand/tests/argument/: handles_boolean_value.cpp  handles_float_value.cpp  handles_int_value.cpp  handles_negative_float_value.cpp  handles_negative_int_value.cpp  handles_string_value.cpp
libs/libcommand/tests/callable/: TestCallable.h  TestCallableFunctionPointer.h  invokes_class_method.cpp  invokes_provided_function.cpp  invokes_void_function.cpp
libs/libcommand/tests/command/: understand_bool_option.test  understand_int_option.test  understand_unsigned_int_option.test  understand_void_option.test
libs/libcommand/tests/command/src/: option_test_command.cpp
libs/libcommand/tests/descriptive/: holds_data.cpp
libs/libcommand/tests/multiValue/: should_extract_arguments_by_separator.cpp  should_extract_options_by_separator.cpp
libs/libcommand/tests/option/: handles_boolean_value.cpp  handles_float_value.cpp  handles_int_value.cpp  handles_negative_float_value.cpp  handles_negative_int_value.cpp  handles_string_value.cpp  handles_void_value.cpp  should_match_exact_name.cpp  should_throw_exception_on_missing_value.cpp
libs/libcommand/tests/parameter/: TestParameter.h  is_descriptive.cpp  should_be_non_required.cpp
libs/libcommand/tests/required/: should_be_required.cpp
libs/restclient-cpp/: CMakeLists.txt
libs/restclient-cpp/include/restclient-cpp/: version.h
libs/restclient-cpp/source/: Makefile  cmake_install.cmake
libs/sse/: CMakeLists.txt  Makefile  http.c  http.h  parse-sse.c  parse-sse.fl  sse.h  tools.c
libs/yaml-cpp/: CMakeLists.txt
src/: cli_env.h  common.h  main.cpp  usage.h  version.h
src/auth/: auth.cpp  auth.h
src/config/: config.cpp  config.h
src/console/: console.cpp  console.h
src/data/: data.cpp  data.h
src/dispatch/: dispatch.cpp  dispatch.h
src/env/: env.cpp  env.h
src/env_var/: env_var.cpp  env_var.h
src/file/: file.cpp  file.h
src/git/: git.h
src/git/repo/: repo.cpp  repo.h
src/helpers/: helpers.cpp  helpers.h
src/jinja/: jinja.cpp  jinja.h  stringhelper.cpp  stringhelper.h
src/logs/: logs.cpp  logs.h
src/models/: models.cpp  models.h
src/organization/: organization.cpp  organization.h
src/project/: project.cpp  project.h
src/project_env/: project_env.cpp  project_env.h
src/request/: request.cpp  request.h
src/templates/: templates.cpp  templates.h
src/thread/: thread.cpp  thread.h
src/whoami/: whoami.cpp  whoami.h
