nobase_pkginclude_HEADERS = \
    descriptive.h \
    callable.h \
    parameter.h \
    argument.h \
    option.h \
    command.h \
    required.h \
    grouped.h \
    multiValue.h \
    exception/missingOptionValue.h \
    exception/missingRequiredParameter.h \
    exception/optionFailedConversion.h \
    exception/optionValueNotSpecified.h
